fix: realigned off centre buttons

--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   border-radius: 5px;
   color: var(--color-white);
   display: block;
-  margin: 0 .5rem;
+  margin: 0 auto;
   padding: .5rem;
   width: 75%;
 }
